@@ -64,6 +64,22 @@ You can also use `go get` to fetch the gocoin sources from GitHub for you:
 
 Make sure that the all sources are placed in a proper location within your GOPATH folder, before compiling them (`go get` should take care of this).
 
+## Have gcc if you can
+Is is recommended to have gcc complier installed in your system, to get advantage of performance improvements.
+
+For Windows install mingw, or rather mingw64 since the client node needs 64-bit architecture.
+
+### Not having gcc
+
+Not having gcc, trying to build the client you will see such an error:
+
+	# github.com/piotrnar/gocoin/qdb
+	exec: "gcc": executable file not found in %PATH%
+
+You can still compile the problematic package...
+
+To fix the problem just copy file `qdb/no_gcc/membind.go` one folder up (overwriting the original `qdb/membind.go`).
+
 ## Compile client
 Go to the `client/` folder and execute `go build` there.
 
